[package]
name = "collections-more"
version = "0.1.4"
authors = ["mfournial (Mike -Mayeul- Fournial)<mayeul.fournial@outlook.com>"]
description = """
Common data structure and algorithms for rust-lang to complete the already excellent std::collections
"""
license-file = "LICENSE"
documentation = "https://docs.rs/collections-more/0.1.4/collections_more/"
readme = "README.md"
repository = "https://www.github.com/mfournial/collections-rust"
homepage = "https://www.github.com/mfournial/collections-rust"

[badges]
travis-ci = { repository = "mfournial/collections-rust" }
maintenance = { status = "experimental" }

[dependencies]
